--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "express": "^5.1.0",
