--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 YELP_API_KEY=BNfRjts3hEkei3AgzfAHjLj8TOoAuFYf-ofPO80IpuIa20XE0kTJITeCsuKBKzcshXGnIx5M7hoJ6-Qf3oN7yZAm3375Q2g9MMbNiFsLrTbGSneovT0Kt4nmYL7eaHYx
+SPOTIFY_CLIENT_ID=687b363aadc048db98ad1234e20aabab
+TICKETMASTER_CONSUMER_KEY=EhGTjonZHjmI6u6J7TuJE7vwB3GcOH6c
+TICKETMASTER_CONSUMER_SECRET=AgI2FL5trrniXbie
