Add Spoonacular API key placeholder

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ YELP_API_KEY=BNfRjts3hEkei3AgzfAHjLj8TOoAuFYf-ofPO80IpuIa20XE0kTJITeCsuKBKzcshXG
 SPOTIFY_CLIENT_ID=687b363aadc048db98ad1234e20aabab
 TICKETMASTER_CONSUMER_KEY=EhGTjonZHjmI6u6J7TuJE7vwB3GcOH6c
 TICKETMASTER_CONSUMER_SECRET=AgI2FL5trrniXbie
+
+SPOONACULAR_KEY=your_recipe_api_key_here
