--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "fast-xml-parser": "^4.5.3",
     "firebase": "^11.8.1",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
+    "@rollup/rollup-linux-x64-gnu": "^4.52.4",
     "husky": "^8.0.0",
     "jsdom": "^26.1.0",
     "purgecss": "^7.0.2",
