--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SPOTIFY_CLIENT_ID=687b363aadc048db98ad1234e20aabab
 TICKETMASTER_CONSUMER_KEY=EhGTjonZHjmI6u6J7TuJE7vwB3GcOH6c
 TICKETMASTER_CONSUMER_SECRET=AgI2FL5trrniXbie
 SPOONACULAR_KEY=175e77e5a84840b3b549f103077d596f
+TMDB_KEY=597d41720e62d34cd6df2b3efec0644d
